metadata/objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to store all general purpose settings for the application. These settings should be accessed via dlib.sf.appsettings.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Any description that gives more information about the settings and its usage.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Env_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this setting should not be copied over from one environment to another.</inlineHelpText>
        <label>Env Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Data type of this Setting. Valid values are String, Integer, Decimal, Date, Datetime, Json, Boolean, List, Map, Set</inlineHelpText>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>The setting value can be stored in one or more value{n}__c fields depending on big that value is. The values are Value1__c, Value2__c etc.,</inlineHelpText>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Settings</label>
</CustomObject>